--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,17 @@
-name: CI - Build & Push Docker Images
+name: CI - Build & Push Docker Image
 
 on:
   push:
     branches:
       - master
-    tags:
-      - "v*"
-      - "release-*"
-      - "build-*"
+      - dockerciupdate
+  tags:
+    - "v*"
+    - "release-*"
+    - "build-*"
 
 env:
-  IMAGE_TAG: ${{ github.ref_name }}-${{ github.run_number }}
+  IMAGE_TAG: ${{ github.run_number }}
 
 jobs:
   build:
@@ -21,20 +22,16 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Azure Login
-      uses: azure/login@v1
+      uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Login to ACR
       run: |
-        az acr login --name ${{ secrets.ACR_LOGIN_SERVER }}
+        az acr login --name acrrecruitmentprod
 
-    - name: Build & Push API
+    - name: Build & Push Image
       run: |
-        docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/service-api:${IMAGE_TAG} service-api
-        docker push ${{ secrets.ACR_LOGIN_SERVER }}/service-api:${IMAGE_TAG}
-
-    - name: Build & Push UI
-      run: |
-        docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/service-ui:${IMAGE_TAG} service-ui
-        docker push ${{ secrets.ACR_LOGIN_SERVER }}/service-ui:${IMAGE_TAG}
+        IMAGE=acrrecruitmentprod.azurecr.io/retail-recruitment:${IMAGE_TAG}
+        docker build -t $IMAGE .
+        docker push $IMAGE
